--- a/presto-native-execution/presto_cpp/main/types/CMakeLists.txt
+++ b/presto-native-execution/presto_cpp/main/types/CMakeLists.txt
@@ -9,21 +9,42 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
+
+# add_library(
+#   presto_type_converter OBJECT
+#   TypeSignatureTypeConverter.cpp antlr/TypeSignatureLexer.cpp
+#   antlr/TypeSignatureParser.cpp)
+
+# target_link_libraries(presto_type_converter velox_type)
+
+# add_library(presto_types OBJECT PrestoToVeloxQueryPlan.cpp
+#                                 PrestoToVeloxExpr.cpp PrestoToVeloxSplit.cpp)
+
+# add_dependencies(presto_types presto_operators presto_type_converter velox_type
+#                  velox_dwio_dwrf_proto)
+
+# target_link_libraries(presto_types presto_type_converter
+#                       velox_hive_partition_function velox_tpch_gen)
+
+# if(PRESTO_ENABLE_TESTING)
+#   add_subdirectory(tests)
+# endif()
+
 add_library(
   presto_type_converter OBJECT
   TypeSignatureTypeConverter.cpp antlr/TypeSignatureLexer.cpp
   antlr/TypeSignatureParser.cpp)
 
+set(Antlr4_INCLUDE_DIRS ${CMAKE_SOURCE_DIR}/antlr4-cpp-runtime/runtime/src)
+
 target_link_libraries(presto_type_converter velox_type)
+target_include_directories(presto_type_converter SYSTEM PRIVATE ${Antlr4_INCLUDE_DIRS})
 
 add_library(presto_types OBJECT PrestoToVeloxQueryPlan.cpp
-                                PrestoToVeloxExpr.cpp PrestoToVeloxSplit.cpp)
-add_dependencies(presto_types presto_operators presto_type_converter velox_type
+                                PrestoToVeloxExpr.cpp)
+                                
+add_dependencies(presto_types presto_type_converter velox_type
                  velox_dwio_dwrf_proto)
 
-target_link_libraries(presto_types presto_type_converter
-                      velox_hive_partition_function velox_tpch_gen)
-
-if(PRESTO_ENABLE_TESTING)
-  add_subdirectory(tests)
-endif()
+target_link_libraries(presto_types antlr4_static presto_type_converter velox_tpch_gen)
+target_include_directories(presto_types SYSTEM PRIVATE ${Protobuf_INCLUDE_DIRS}  ${Antlr4_INCLUDE_DIRS})
